--- a/data/datas/Makefile.am
+++ b/data/datas/Makefile.am
@@ -8,6 +8,7 @@ hb-categories-it.csv \
 hb-categories-pt.csv \
 hb-categories-ro.csv \
 hb-categories-ru.csv \
+hb-categories-sk.csv \
 example.xhb
 
 EXTRA_DIST   = $(datas_DATA)
