--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -2,14 +2,17 @@
 
 SUBDIRS = icons datas
 
-desktopdir = $(datadir)/applications
+desktopdir 		 = $(datadir)/applications
 desktop_in_files = homebank.desktop.in
-desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
+desktop_DATA	 = $(desktop_in_files:.desktop.in=.desktop)
 @INTLTOOL_DESKTOP_RULE@
 
-EXTRA_DIST = 				\
+EXTRA_DIST =	\
 	$(desktop_in_files)		
 
-CLEANFILES = \
+CLEANFILES =	\
+	$(desktop_DATA)
+
+DISTCLEANFILES =	\
 	$(desktop_DATA)
 
