--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: homebank
 Section: gnome
 Priority: optional
 Maintainer: Francesco Namuri <franam@debian.org>
-Build-Depends: debhelper (>= 5.0.0), cdbs, autotools-dev, pkg-config, libgtk-3-dev, libxml-parser-perl, quilt, libofx-dev, intltool
+Build-Depends: debhelper (>= 5.0.0), cdbs, autotools-dev, pkg-config, libgtk-3-dev, libxml-parser-perl, quilt, libofx-dev, libsoup2.4-dev, intltool
 Standards-Version: 3.9.5
 Vcs-Svn: svn://anonscm.debian.org/collab-maint/ext-maint/homebank/trunk
 Vcs-Browser: http://anonscm.debian.org/wsvn/collab-maint/ext-maint/homebank/trunk/
