--- a/data/Makefile.in
+++ b/data/Makefile.in
@@ -341,7 +341,7 @@ appdatadir = $(datadir)/appdata
 appdata_in_files = homebank.appdata.xml.in
 appdata_DATA = $(appdata_in_files:.xml.in=.xml)
 EXTRA_DIST = \
-	homebank.desktop.in.in \
+	$(desktop_in_files) \
 	$(appdata_in_files)
 
 CLEANFILES = \
