--- a/themes/hicolor/Makefile.in
+++ b/themes/hicolor/Makefile.in
@@ -320,6 +320,8 @@ private_icons = \
 	hicolor_status_48x48_prf-interface.png \
 	hicolor_status_48x48_prf-report.png \
 	hicolor_actions_scalable_toggle-sign-symbolic.svg \
+	hicolor_actions_scalable_btn-collapse-symbolic.svg \
+	hicolor_actions_scalable_btn-expand-symbolic.svg \
 	$(NULL)
 
 EXTRA_DIST = \
